fix paths in supervisor conf

--- a/deploy/docker/conf/supervisord.conf
+++ b/deploy/docker/conf/supervisord.conf
@@ -1,7 +1,7 @@
 ; Sample supervisor config file.
 
 [unix_http_server]
-file=run/supervisord.sock   ; (the path to the socket file)
+file=/workspace/run/supervisor.sock  ; (the path to the socket file)
 ;chmod=0700                 ; sockef file mode (default 0700)
 ;chown=nobody:nogroup       ; socket file uid:gid owner
 ;username=user              ; (default is no username (open server))
@@ -13,11 +13,11 @@ file=run/supervisord.sock   ; (the path to the socket file)
 ;password=123               ; (default is no password (open server))
 
 [supervisord]
-logfile=transtats/logs/supervisord.log  ; (main log file;default $CWD/supervisord.log)
+logfile=/workspace/transtats/logs/supervisord.log  ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=50MB       ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10          ; (num of main logfile rotation backups;default 10)
 loglevel=info               ; (log level;default info; others: debug,warn,trace)
-pidfile=run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+pidfile=/workspace/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=false              ; (start in foreground if true;default false)
 minfds=1024                 ; (min. avail startup file descriptors;default 1024)
 minprocs=200                ; (min. avail process descriptors;default 200)
@@ -37,7 +37,7 @@ minprocs=200                ; (min. avail process descriptors;default 200)
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///run/supervisor/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///workspace/run/supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 ;username=chris              ; should be same as http_username if set
 ;password=123                ; should be same as http_password if set
