tweak syncupstream and stringchange jobs to accommodate additional l10n repo

--- a/dashboard/tests/testdata/job-templates/syncupstream.yml
+++ b/dashboard/tests/testdata/job-templates/syncupstream.yml
@@ -7,7 +7,8 @@ job:
   tasks:
   - clone:
     - name: git repo
-    - branch: master
+    - type: %REPO_TYPE%
+    - branch: %REPO_BRANCH%
   - filter:
     - name: files
     - ext: PO
