--- a/dashboard/tests/testdata/job-templates/stringchange.yml
+++ b/dashboard/tests/testdata/job-templates/stringchange.yml
@@ -8,7 +8,7 @@ job:
   tasks:
   - clone:
     - name: git repo
-    - branch: master
+    - branch: %REPO_BRANCH%
     - recursive: true
   - generate:
     - name: POT file
