--- a/dashboard/tests/testdata/job-templates/pushtrans_1.yml
+++ b/dashboard/tests/testdata/job-templates/pushtrans_1.yml
@@ -16,10 +16,13 @@ job:
     - cmd: cd po && intltool-update --pot --gettext-package=%PACKAGE_NAME%
     - domain: %PACKAGE_NAME%
     - overwrite: false
-  - push:
-    - name: Push file
+  - filter:
+    - name: files
     - ext: PO
+  - upload:
+    - name: Push files
     - target_langs: %TARGET_LANGS%
     - prehook: merge_POT
     - posthook: skip
+    - update: false
   type: pushtrans
