--- a/dashboard/tests/testdata/job-templates/pushtrans_2.yml
+++ b/dashboard/tests/testdata/job-templates/pushtrans_2.yml
@@ -1,5 +1,5 @@
 job:
-  release: %RELEASE_SLUG%
+  ci_pipeline: %PIPELINE_UUID%
   exception: raise
   execution: sequential
   name: push translations
@@ -8,16 +8,21 @@ job:
   tasks:
   - clone:
     - name: git repo
-    - type: l10n
+    - type: %REPO_TYPE%
     - branch: %REPO_BRANCH%
     - recursive: false
+  - generate:
+    - name: POT file
+    - cmd: cd po && intltool-update --pot --gettext-package=%PACKAGE_NAME%
+    - domain: %PACKAGE_NAME%
+    - overwrite: false
   - filter:
     - name: files
     - ext: PO
   - upload:
     - name: Push files
     - target_langs: %TARGET_LANGS%
-    - prehook: skip
+    - prehook: merge_POT
     - posthook: skip
     - update: false
   type: pushtrans
