--- a/deploy/docker/conf/transtats_celery.ini
+++ b/deploy/docker/conf/transtats_celery.ini
@@ -6,7 +6,7 @@
 [program:transtatscelery]
 
 ; Set full path to celery program if using virtualenv
-command=/usr/local/bin/celery worker -A transtats --loglevel=INFO --autoscale=4,1 --max-tasks-per-child=2
+command=/usr/local/bin/celery --app=transtats worker --loglevel=INFO --autoscale=4,1 --max-tasks-per-child=2
 
 ; The directory to your Django project
 directory=/workspace
