--- a/dashboard/tests/testdata/job-templates/syncdownstream.yml
+++ b/dashboard/tests/testdata/job-templates/syncdownstream.yml
@@ -17,5 +17,7 @@ job:
     - apply: patch
     - filter:
       - name: files
+      - domain: %PACKAGE_NAME%
       - ext: PO
+      - dir: ''
     - calculate: Stats
