--- a/dashboard/tests/testdata/job-templates/syncupstream.yml
+++ b/dashboard/tests/testdata/job-templates/syncupstream.yml
@@ -9,8 +9,11 @@ job:
     - name: git repo
     - type: %REPO_TYPE%
     - branch: %REPO_BRANCH%
+    - recursive: false
   - filter:
     - name: files
+    - domain: %PACKAGE_NAME%
     - ext: PO
+    - dir: ''
   - calculate: Stats
   type: syncupstream
