--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,13 +1,16 @@
 server {
+        listen       80 default_server;
+        listen       [::]:80 default_server;
+        server_name  _;
 
-    listen 80;
-    server_name app.transtats.org;
+        location / {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://unix:/home/transtats/transtats/transtats/transtats.sock;
+            proxy_connect_timeout 180s;
+            proxy_read_timeout 300s;
 
-    location / {
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://unix:/home/transtats/transtats/transtats/transtats.sock;
+        }
     }
-}
