add downstream package name for syncing builds implement Memsource workflowStep for CI Pipeline

--- a/dashboard/tests/testdata/job-templates/pulltrans_1.yml
+++ b/dashboard/tests/testdata/job-templates/pulltrans_1.yml
@@ -9,6 +9,7 @@ job:
   - download:
     - name: Pull translations
     - target_langs: %TARGET_LANGS%
+    - workflow_step: %WORKFLOW_STEP%
   - upload:
       - name: Submit translations
       - type: %REPO_TYPE%
