--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,9 @@ jobs:
     docker:
       - image: registry.fedoraproject.org/fedora:latest
         environment:
-          DATABASE_URL: postgresql://root@localhost/transtats?sslmode=disable
-      - image: circleci/postgres:9.6.2
+          TEST_DATABASE_URL: postgresql://root@localhost/transtats?sslmode=disable
+      - image: circleci/postgres:12.0
         environment:
-          POSTGRES_USER: root
           POSTGRES_DB: transtats
     steps:
       - run:
