--- a/dashboard/tests/testdata/job-templates/pulltrans_1.yml
+++ b/dashboard/tests/testdata/job-templates/pulltrans_1.yml
@@ -10,6 +10,7 @@ job:
     - name: Pull translations
     - target_langs: %TARGET_LANGS%
     - workflow_step: %WORKFLOW_STEP%
+    - prepend_branch: false
   - upload:
       - name: Submit translations
       - type: %REPO_TYPE%
