--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - run:
           name: Install system dependencies
-          command: dnf -y install gcc findutils git python3 python3-pip python3-devel sudo redhat-rpm-config koji cpio patch make openssh-server openssl-devel libxcrypt-compat
+          command: dnf -y install gcc findutils git python3 python3-pip python3-devel sudo redhat-rpm-config koji cpio patch make openssh-server openssl-devel libxcrypt-compat libpq-devel
       - checkout
       - run:
           name: Setup environment
