bugfix: match downloaded files names with remote bugfix: ack localization repo type in clone make pull request action mapper generic add git config to pull request action mapper add workflowStep and workflowStep to yml_job_form

--- a/dashboard/tests/testdata/job-templates/pulltrans_2.yml
+++ b/dashboard/tests/testdata/job-templates/pulltrans_2.yml
@@ -21,9 +21,9 @@ job:
     - prepend_branch: false
   - copy:
     - name: Downloaded files
-    - dir: ''
+    - dir: %COPY_DIR%
   - pullrequest:
-    - name: github repo
+    - name: git repo
     - type: %REPO_TYPE%
     - branch: %REPO_BRANCH%
   type: pulltransmerge
